Dynamic loading of folder store. Added page model. Fixed zoom on mobile phones.

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -47,13 +47,12 @@ $base-color: #685848;
 	}
 
 }
-
 .folder{
 	margin:0px 5px;
 }
 .folderImage{
 	height:95%;
-	margin:2.5% 0;
+	margin:2.5% 0 2.5% 0;
 }
 //Adding wood background for portrait and landscape
 .main{
